--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "framework7": "^2.2.1"
+    "framework7": "^2.2.1",
+    "framework7-icons": "^0.9.1",
+    "material-design-icons": "^3.0.1"
   },
   "devDependencies": {
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.23.7",
-    "less": "^2",
+    "less": "^2.7.3",
     "parcel-bundler": "^1.7.1"
   }
 }
