--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "framework7": "^2.2.1",
     "framework7-icons": "^0.9.1",
+    "idb": "^2.1.1",
     "material-design-icons": "^3.0.1"
   },
   "devDependencies": {
