--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "browser-sync": "browser-sync start --proxy \"localhost:1234\" --files \"**/*.css, **/*.js, **/*.html\"",
-    "dev": "parcel src/index.html -p 1234",
-    "build": "parcel build src/index.html",
+    "dev": "rm -r dist/* && parcel src/index.html -p 1234",
+    "build": "rm -r dist/* && parcel build src/index.html",
+    "deploy": "yarn build && rm -r docs/* && cp -R dist/. docs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "DNA",
   "license": "ISC",
   "dependencies": {
     "framework7": "^2.2.1",
