--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "browser-sync": "browser-sync start --proxy \"localhost:1234\" --files \"**/*.css, **/*.js, **/*.html\"",
-    "dev": "rm -r dist/* && parcel src/index.html -p 1234",
-    "build": "rm -r dist/* && parcel build src/index.html",
-    "deploy": "yarn build && rm -r docs/* && cp -R dist/. docs",
+    "dev": "rimraf dist/* && parcel src/index.html -p 1234",
+    "build": "rimraf dist/* && parcel build --public-url ./ --no-source-maps src/index.html",
+    "deploy": "yarn build && rimraf docs/* && cpx \"dist/*\" docs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "DNA",
@@ -22,7 +22,9 @@
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "browser-sync": "^2.23.7",
+    "cpx": "^1.5.0",
     "less": "^2.7.3",
-    "parcel-bundler": "^1.7.1"
+    "parcel-bundler": "^1.7.1",
+    "rimraf": "^2.6.2"
   }
 }
